# mtk

./: .gitignore  .mcp.json  CLAUDE.md  README.md  SPEC.md  pyproject.toml
docs/plans/: 2026-02-28-sqlite-centric-redesign.md  2026-03-18-mtk-v0.4.0-impl.md  2026-03-18-mtk-v0.4.0-purge.md
docs/superpowers/plans/: 2026-04-15-mtk-to-mail-memex.md
docs/superpowers/specs/: 2026-04-15-mtk-to-mail-memex-design.md
scripts/: migrate-from-mtk.py
src/mail_memex/: __init__.py
src/mail_memex/cli/: __init__.py  imap_cli.py  main.py
src/mail_memex/core/: __init__.py  config.py  database.py  marginalia.py  models.py
src/mail_memex/export/: __init__.py  arkiv_export.py  base.py  html_builder.py  html_export.py  html_template.py  json_export.py  markdown_export.py  mbox_export.py  templates_index.html
src/mail_memex/imap/: __init__.py  account.py  auth.py  connection.py  mapping.py  pull.py
src/mail_memex/importers/: __init__.py  base.py  eml.py  mbox.py  parser.py
src/mail_memex/mcp/: __init__.py  __main__.py  server.py
src/mail_memex/search/: __init__.py  engine.py  fts.py
src/mtk/: __init__.py
src/mtk/cli/: imap_cli.py  main.py  shell.py
src/mtk/core/: __init__.py  config.py  database.py  models.py  privacy.py
src/mtk/export/: __init__.py  arkiv_export.py  base.py  html_export.py  json_export.py  markdown_export.py  mbox_export.py
src/mtk/imap/: __init__.py  account.py  auth.py  connection.py  gmail.py  mapping.py  pull.py  push.py
src/mtk/integrations/: notmuch.py
src/mtk/llm/: providers.py
src/mtk/mcp/: __init__.py  __main__.py  resources.py  server.py  tools.py  validation.py
src/mtk/notmuch/: wrapper.py
src/mtk/people/: relationships.py
src/mtk/search/: __init__.py  engine.py  fts.py
tests/: __init__.py  conftest.py  test_arkiv.py  test_cli.py  test_database.py  test_fts.py  test_html_export.py  test_imap.py  test_importers.py  test_marginalia.py  test_mcp_server.py  test_parser.py  test_people.py  test_search.py  test_soft_delete.py
